--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -1,5 +1,5 @@
 name:                psc-package
-version:             0.10.6
+version:             0.10.7
 synopsis:            An experimental package manager for PureScript
 description:
 homepage:            https://github.com/purescript/psc-package
@@ -15,13 +15,14 @@ cabal-version:       >=1.10
 
 executable psc-package
     build-depends: base >=4 && <5,
-                   purescript ==0.10.6,
+                   purescript ==0.10.7,
                    aeson -any,
                    aeson-pretty -any,
                    bytestring -any,
                    containers -any,
                    foldl -any,
                    optparse-applicative -any,
+                   process -any,
                    system-filepath -any,
                    text -any,
                    turtle ==1.3.*
@@ -30,3 +31,4 @@ executable psc-package
     buildable: True
     hs-source-dirs: app
     ghc-options: -Wall -O2
+    default-language:    Haskell2010
