--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -15,7 +15,6 @@ cabal-version:       >=1.10
 
 executable psc-package
     build-depends: base >=4 && <5,
-                   purescript ==0.10.7,
                    aeson -any,
                    aeson-pretty -any,
                    bytestring -any,
@@ -27,7 +26,7 @@ executable psc-package
                    text -any,
                    turtle ==1.3.*
     main-is: Main.hs
-    other-modules:
+    other-modules: Paths_psc_package
     buildable: True
     hs-source-dirs: app
     ghc-options: -Wall -O2
