--- a/stack.yaml
+++ b/stack.yaml
@@ -1,6 +1,4 @@
-resolver: lts-8.5
+resolver: lts-8.15
 packages:
 - '.'
-extra-deps:
-- optparse-applicative-0.13.0.0
-- turtle-1.3.1
+extra-deps: []
