Add a newtype for package names
Part of #21; this does not fully fix #21 as it only addresses package
names.

--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -27,6 +27,7 @@ executable psc-package
                    turtle ==1.3.*
     main-is: Main.hs
     other-modules: Paths_psc_package
+                   Types
     buildable: True
     hs-source-dirs: app
     ghc-options: -Wall -O2
