--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -17,6 +17,7 @@ executable psc-package
     build-depends: base >=4 && <5,
                    aeson -any,
                    aeson-pretty -any,
+                   async -any,
                    bytestring -any,
                    containers -any,
                    foldl -any,
@@ -30,5 +31,5 @@ executable psc-package
                    Types
     buildable: True
     hs-source-dirs: app
-    ghc-options: -Wall -O2
+    ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
     default-language:    Haskell2010
