--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -13,8 +13,17 @@ build-type:          Simple
 extra-source-files:  README.md
 cabal-version:       >=1.10
 
+library
+    hs-source-dirs:      src
+    exposed-modules:     Language.PureScript.Package.Types
+    build-depends:       base >= 4.7 && < 5,
+                         aeson -any,
+                         text
+    default-language:    Haskell2010
+
 executable psc-package
-    build-depends: base >=4 && <5,
+    build-depends: psc-package,
+                   base >=4 && <5,
                    aeson -any,
                    aeson-pretty -any,
                    async -any,
@@ -28,7 +37,6 @@ executable psc-package
                    turtle ==1.3.*
     main-is: Main.hs
     other-modules: Paths_psc_package
-                   Types
     buildable: True
     hs-source-dirs: app
     ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
