--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -15,6 +15,7 @@ cabal-version:       >=1.10
 
 library
     hs-source-dirs:      src
+    ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-identities
     exposed-modules:     Language.PureScript.Package.Types
     build-depends:       base >= 4.7 && < 5,
                          aeson -any,
@@ -39,5 +40,5 @@ executable psc-package
     other-modules: Paths_psc_package
     buildable: True
     hs-source-dirs: app
-    ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
+    ghc-options: -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -O2 -threaded -rtsopts -with-rtsopts=-N
     default-language:    Haskell2010
