--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -17,6 +17,7 @@ library
     hs-source-dirs:      src
     ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-identities
     exposed-modules:     Language.PureScript.Package.Types,
+                         Language.PureScript.Package.Types.PackageConfig,
                          Language.PureScript.Package.Types.PackageName
     build-depends:       base >= 4.7 && < 5,
                          aeson -any,
