--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -21,6 +21,8 @@ library
                          Language.PureScript.Package.Types.PackageName
     build-depends:       base >= 4.7 && < 5,
                          aeson -any,
+                         aeson-pretty -any,
+                         turtle ==1.3.*,
                          text
     default-language:    Haskell2010
 
