--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -18,11 +18,14 @@ library
     ghc-options:         -Wall -fwarn-tabs -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-identities
     exposed-modules:     Language.PureScript.Package.Types.PackageConfig,
                          Language.PureScript.Package.Types.PackageInfo,
-                         Language.PureScript.Package.Types.PackageName
+                         Language.PureScript.Package.Types.PackageName,
+                         Language.PureScript.Package.Git,
+                         Language.PureScript.Package.Install,
+                         Language.PureScript.Package.Path
     build-depends:       base >= 4.7 && < 5,
                          aeson -any,
                          aeson-pretty -any,
-                         turtle ==1.3.*,
+                         turtle == 1.3.*,
                          text
     default-language:    Haskell2010
 
