--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -19,12 +19,14 @@ library
     exposed-modules:     Language.PureScript.Package.Types.PackageConfig,
                          Language.PureScript.Package.Types.PackageInfo,
                          Language.PureScript.Package.Types.PackageName,
+                         Language.PureScript.Package.Types.PackageSet,
                          Language.PureScript.Package.Git,
                          Language.PureScript.Package.Install,
                          Language.PureScript.Package.Path
     build-depends:       base >= 4.7 && < 5,
                          aeson -any,
                          aeson-pretty -any,
+                         containers,
                          turtle == 1.3.*,
                          text
     default-language:    Haskell2010
@@ -32,8 +34,6 @@ library
 executable psc-package
     build-depends: psc-package,
                    base >=4 && <5,
-                   aeson -any,
-                   aeson-pretty -any,
                    async -any,
                    bytestring -any,
                    containers -any,
