--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -22,10 +22,12 @@ library
                          Language.PureScript.Package.Types.PackageSet,
                          Language.PureScript.Package.Git,
                          Language.PureScript.Package.Install,
-                         Language.PureScript.Package.Path
+                         Language.PureScript.Package.Path,
+                         Language.PureScript.Package.Update
     build-depends:       base >= 4.7 && < 5,
                          aeson -any,
                          aeson-pretty -any,
+                         async -any,
                          containers,
                          turtle == 1.3.*,
                          text
@@ -34,7 +36,6 @@ library
 executable psc-package
     build-depends: psc-package,
                    base >=4 && <5,
-                   async -any,
                    bytestring -any,
                    containers -any,
                    foldl -any,
