--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -25,7 +25,7 @@ executable psc-package
                    process -any,
                    system-filepath -any,
                    text -any,
-                   turtle ==1.3.*
+                   turtle >=1.3 && <1.5
     main-is: Main.hs
     other-modules: Paths_psc_package
                    Types
