--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -17,7 +17,7 @@ executable psc-package
     build-depends: base >=4 && <5,
                    aeson -any,
                    aeson-pretty -any,
-                   async -any,
+                   async >= 2.1.1,
                    bytestring -any,
                    containers -any,
                    foldl -any,
