make add-from-bower write to local package set
also adds a newer aeson-pretty to extra-deps to use trailing newline
formatting

--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,5 @@
 resolver: lts-11.1
 packages:
 - '.'
-extra-deps: []
+extra-deps:
+- aeson-pretty-0.8.5 # newer in lts-11.1 needed for formatting packages.json
