Give the user some help when they try installing purescript-xxx, even when xxx is not a valid package

--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -20,6 +20,7 @@ executable psc-package
                    async >= 2.1.1,
                    bytestring -any,
                    containers -any,
+                   either -any,
                    foldl -any,
                    optparse-applicative -any,
                    process -any,
