--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -27,8 +27,7 @@ executable psc-package
                    system-filepath -any,
                    text -any,
                    errors -any,
-                   turtle <1.6,
-                   SafeSemaphore -any
+                   turtle <1.6
     main-is: Main.hs
     other-modules: Paths_psc_package
                    Types
