--- a/psc-package.cabal
+++ b/psc-package.cabal
@@ -18,6 +18,7 @@ executable psc-package
                    aeson -any,
                    aeson-pretty -any,
                    async >= 2.1.1,
+                   pretty-terminal >= 0.1.0.0,
                    bytestring -any,
                    containers -any,
                    either -any,
